# sigma-diagnostics

./: .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  LICENSING.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
can-viewer/: Cargo.toml
can-viewer/src/: config.rs  lib.rs  main.rs
can-viewer/src/app/: analysis.rs  analyze.rs  catalog.rs  dbc.rs  helpers.rs  live.rs  mdf4.rs  mod.rs
can-viewer/src/app/dbc/: dbc_controller.rs  edits.rs  endian.rs  rows.rs
can-viewer/src/services/: init.rs  mod.rs
can-viewer/src/state/: app_state.rs
can-viewer/ui/: app.slint
can-viewer/ui/tabs/: about_tab.slint  analyze_tab.slint
can-viewer/ui/widgets/: bit_map.slint  common.slint
canre/: Cargo.toml
canre/src/: main.rs
canre/tests/: mdf4_roundtrip.rs
examples/: README.md
frontend/lib/: renderers.ts  types.ts
frontend/lib/api/: tauri-api.ts
frontend/lib/components/dbc-editor/: dbc-editor.ts  message-editor.ts  nodes-editor.ts  signal-editor.ts  signals-table.ts
frontend/lib/components/live-viewer/: live-viewer.ts
frontend/lib/components/mdf4-inspector/: mdf4-inspector.ts
frontend/lib/components/shared/: signals-panel.ts  toast.ts
frontend/lib/utils/: html.ts
frontend/styles/: can-viewer.css
icons/: generate_icons.py
sigma-diagnostics/: Cargo.toml
sigma-diagnostics/src/: lib.rs  mdf.rs  state.rs
sigma-diagnostics/src/analysis/: bits.rs  checksum.rs  correlate.rs  counter.rs  dbc_check.rs  diff.rs  mod.rs  mux.rs  report.rs  survey.rs
sigma-diagnostics/src/capture/: service.rs
sigma-diagnostics/src/filter/: dbc_message_info.rs  dlc_detection_result.rs  filter_config.rs  filter_result.rs  filtering.rs  frame_stats.rs  match_status.rs  message_count.rs  mod.rs  pattern.rs  statistics.rs  tests.rs
sigma-diagnostics/src/live_capture/: error_entry.rs  message_entry.rs  mod.rs  signal_entry.rs  state.rs
sigma-diagnostics/src/obd/: extract.rs  isotp.rs  mod.rs  pids.rs  poll.rs
sigma-diagnostics/src/updates/: fetch.rs  updates_config.rs
sigma-diagnostics/src/vehicle/: diagnosis.rs  logs.rs  mod.rs  ota.rs  recording.rs  session.rs  transport.rs
sigma-diagnostics/src/vehicle/maintenance/: maintenance_action.rs
sigma-diagnostics/src/vehicle/ota/: ota_config.rs
sigma-diagnostics/src/vehicle/recording/: sessions.rs  telemetry_recorder.rs  telemetry_replayer.rs
sigma-diagnostics/src/vehicle/session/: vehicle_session.rs  vehicle_session_status.rs
sigma-racer-mechanic/: Cargo.toml  README.md  build.rs
sigma-racer-mechanic/src/: config.rs  lib.rs  main.rs  state.rs
sigma-racer-mechanic/src/app/: analysis.rs  vehicle.rs
sigma-racer-mechanic/ui/: app.slint
sigma-racer-mechanic/ui/tabs/: connect_tab.slint  logs_tab.slint
src/: about.rs  config.rs  dbc_export.rs  dto.rs  lib.rs  live_capture.rs  main.rs  state.rs
src/app/: catalog.rs  dbc.rs  helpers.rs  live.rs  mdf4.rs  mod.rs
src/commands/: capture.rs  dbc.rs  mdf.rs
src/services/: capture.rs  dbc.rs  filter.rs  init.rs  mdf.rs  mod.rs  updates.rs
tests/: mdf4_integration.rs
ui/: app.slint  theme.slint
ui/tabs/: about_tab.slint  dbc_tab.slint  live_tab.slint  mdf4_tab.slint
ui/widgets/: brand.slint  common.slint  dbc_catalog.slint
