[package]
name = "diagnostics"
version = "0.3.0"
edition = "2021"
default-run = "diagnostics"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/diagnostics"
homepage = "https://sigmatactical.org"
rust-version = "1.90.0"
readme = "README.md"
description = "Diagnostics — MDF4, SocketCAN, and DBC analysis (Slint UI)"
keywords = ["can", "mdf4", "dbc", "automotive", "socketcan"]
categories = ["visualization", "embedded"]
include = [
    "src/**/*",
    "ui/**/*",
    "Cargo.toml",
    "build.rs",
    "examples/*",
    "/README.md",
    "/CONTRIBUTORS.md",
    "/LICENSE-*",
    "/LICENSING.md",
    "/ARCHITECTURE.md",
]

[build-dependencies]
slint-build = "=1.13.1"
serde_json = "1"

[dependencies]
slint = { version = "=1.13.1", default-features = false, features = [
    "renderer-femtovg",
    "backend-winit",
    "compat-1-2",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rfd = "0.15"
env_logger = "0.11"
ureq = "2.12"

mdf4-rs = "0.2.1"
dbc-rs = { version = "0.5", features = ["std", "embedded-can"] }
embedded-can = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"

[lib]
name = "diagnostics"
path = "src/lib.rs"

[[bin]]
name = "diagnostics"
path = "src/main.rs"

[features]
default = []
