[workspace]
resolver = "2"
members = ["can-viewer", "sigma-diagnostics", "sigma-racer-mechanic"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-diagnostics"
homepage = "https://sigmatactical.org"
rust-version = "1.90.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
parking_lot = "0.12"
ureq = "2.12"
mdf4-rs = "0.2.1"
dbc-rs = { version = "0.5", features = ["std", "embedded-can"] }
embedded-can = "0.4.1"
socketcan = "3"
