[workspace]
resolver = "2"
members = ["can-viewer", "sigma-diagnostics", "sigma-racer-mechanic"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-diagnostics"
homepage = "https://sigmatactical.org"
rust-version = "1.97.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
log = "0.4.33"
parking_lot = "0.12.5"
ureq = "3.3.0"
mdf4-rs = "0.5.0"
dbc-rs = { version = "0.9.0", features = ["std", "embedded-can"] }
embedded-can = "0.4.1"
socketcan = "3.6.2"
