[package]
name = "canre"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Definitive CAN signal reverse-engineering CLI (survey, diff, DBC validation, OBD ground-truth correlation)"

[dependencies]
sigma-diagnostics = { path = "../sigma-diagnostics" }
clap = { version = "4.6.1", features = ["derive"] }
dbc-rs = { workspace = true }
serde_json = { workspace = true }
